@@ -32,8 +32,13 @@ cd "/Applications/Burp Suite Professional.app/Contents/Resources/app"
 ```
 点击run启动Burp, 激活后关闭注册机
 
-3. 修改`/Applications/Burp Suite Professional.app/Contents/vmoptions.txt`, 增加两行
+3. 修改`/Applications/Burp Suite Professional.app/Contents/vmoptions.txt`, 增加以下参数
 ```
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED
 -javaagent:BurpLoaderKeygen.jar
 -noverify
 ```
